<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"
    android:background="#CBD68B"
    android:orientation="vertical"
    tools:context=".Profil_Rizqulloh">

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:contentDescription="@string/fotoRizqulloh"
        app:srcCompat="@drawable/img_20210809_084428_removebg_preview" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <EditText
        android:id="@+id/nama_Rizqulloh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7A7C4D"
        android:backgroundTint="#DDD7D7"
        android:ems="10"
        android:hint="@string/hint_nama"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:text="@string/nama_Rizqulloh" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <EditText
        android:id="@+id/email_Rizqulloh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7A7C4D"
        android:backgroundTint="#DDD7D7"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:text="@string/email_Rizqulloh" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <EditText
        android:id="@+id/nim_Rizqulloh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7A7C4D"
        android:backgroundTint="#DDD7D7"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:text="@string/nim_Rizqulloh" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <EditText
        android:id="@+id/ttl_Rizqulloh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7A7C4D"
        android:backgroundTint="#DDD7D7"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:text="@string/ttl_Rizqulloh" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="18dp" />

    <EditText
        android:id="@+id/alamat_Rizqulloh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#7A7C4D"
        android:backgroundTint="#DDD7D7"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:text="@string/alamat_Rizqulloh" />

</LinearLayout>